Remove circle gradient element in favour of linear gradient to prevent banner clipping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Crutch until we can remove old page templates */
+
+
+.v2 body {
+  background-color: "#080D19";
+  background-image: linear-gradient(
+    to bottom,
+    #121139 0%,
+    #080D19 100vh
+  );
+}
+
+
+.gradient {
+  display: none;
+}
+
+
+
 /** Standard **/
 
 @supports (font-variation-settings: normal) {
